--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,14 +2,15 @@ app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
+hwi_oauth_login:
+    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+    prefix:   /login-outh
 hwi_oauth_redirect:
     resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
     prefix:   /connect
-
-hwi_oauth_login:
-    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
-    prefix:   /login
-
+hwi_oauth_connect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+    prefix:   /connect
 
 facebook_login:
     path: /login/check-facebook
@@ -17,8 +18,11 @@ facebook_login:
 google_login:
     path: /login/check-google
 
-custom_login:
-    path: /login/check-custom
-
-github_login:
-    path: /login/check-github
+vkontakte_login:
+    path: /login/check-vkontakte
+#
+#custom_login:
+#    path: /login/check-custom
+#
+#github_login:
+#    path: /login/check-github
