--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,6 +6,8 @@ security:
     providers:
         user_db:
             entity: { class: AppBundle\Entity\User, property: username }
+        hwi:
+            id: hwi_oauth.user.provider
 
     encoders:
             AppBundle\Entity\User:
@@ -17,27 +19,24 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        secured_area:
-                    anonymous: ~
-                    oauth:
-                        resource_owners:
-                            facebook:           "/login/check-facebook"
-                        login_path:        /login
-                        use_forward:       false
-                        failure_path:      /login
-
-                        oauth_user_provider:
-                            service: hwi_oauth.user.provider.entity
-
-
         default:
-                    anonymous: ~
-                    form_login:
-                        login_path: /login
-                        check_path: /login_check
-                    logout:
-                        path:   /logout
-                        target: /
+            anonymous: ~
+            form_login:
+                login_path: /login
+                check_path: /login_check
+            oauth:
+                resource_owners:
+                    facebook:           "/login/check-facebook"
+                    google:             "/login/check-google"
+                    vkontakte:          "/login/check-vkontakte"
+                login_path:        /
+                use_forward:       false
+                failure_path:      /
+                oauth_user_provider:
+                    service: hwi_oauth.user.provider.entity
+            logout:
+                path:   /logout
+                target: /
 
         main:
             anonymous: ~
