--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "hwi/oauth-bundle": "^0.4.1"
+        "hwi/oauth-bundle": "^0.4.1",
+        "mcfedr/json-form": "^3.2",
+        "friendsofsymfony/jsrouting-bundle": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
